# instapi

./: .gitignore  Cargo.toml  LICENSE  README.md  auth.html  dummy.html  styles.css
.github/workflows/: rust.yml
examples/: instafetcher.rs
examples/instafetcher/: main.rs  media.rs  token.rs
src/: auth.rs  lib.rs  profile.rs  user.rs
