[package]
name = "instafetcher"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/lem0nez/instafetcher"
readme = "README.md"
license = "MIT"
keywords = ["cli", "instagram"]
categories = ["command-line-utilities"]
description = """
A sample utility to gather metadata and media files of \
Instagram accounts using the Instagram Basic Display API
"""

[dependencies]
chrono = "0.4.19"
open = "2.1.2"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
