[package]
name = "instapi"
version = "1.0.0"
edition = "2018"
authors = ["Nikita Dudko <nikita.dudko.95@gmail.com>"]
repository = "https://github.com/lem0nez/instapi"
readme = "README.md"
license = "MIT"
keywords = ["api", "cli", "instagram"]
categories = ["api-bindings", "command-line-utilities"]
description = "Wrapper around the Instagram Basic Display API to gather metadata and media files"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
threadpool = "1.8.1"
num_cpus = "1.13.1"
open = "2.1.2"
url = "2.2.2"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }

[dev-dependencies]
clap = { version = "3.1.18", features = ["derive"] }
dirs = "4.0.0"
serde_json = "1.0.81"

[[example]]
name = "instafetcher"
